--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,6 +57,7 @@
     "typeinfo": "cpp",
     "variant": "cpp",
     "format": "cpp",
-    "cassert": "cpp"
+    "cassert": "cpp",
+    "bitset": "cpp"
   }
 }
